--- a/style - Copy.css
+++ b/style - Copy.css
@@ -20,3 +20,8 @@ body {
     height: 180px;
     object-fit: cover;
 }
+body.login-form {
+    background-image: url("img/bak.jpg");
+    background-position: center;
+    background-size: cover;
+}
